Code quality improvement